# Scoundrills

./: .gitignore  .gitmodules  CMakeLists.txt  Scoundrills.aps  Scoundrills.sln  Scoundrills.vcxproj  Scoundrills.vcxproj.filters  TempBar.aseprite  TileHandler.cpp  TileHandler.h  compile.sh  generate_appimage.sh  profile.sh  profiling.md  readme.md  resource.h
Aseprite files/: John French.aseprite  NavIcons.aseprite  Start button.aseprite  Tileset Template.aseprite  Trap door.aseprite  Waffling.aseprite  Water tank.aseprite  caret.aseprite  drillNav.aseprite  pipesBroken.aseprite  player Model template.aseprite  ui elements.aseprite
Aseprite files/Criminal/: John Police.aseprite  Rob evan truly.aseprite  Robin banks.aseprite  Shawn arson Burnes.aseprite  Will Sabot Togue.aseprite  jay walt kins.aseprite
Aseprite files/Drill/: Boiler.aseprite  Bucket.aseprite  Drill Walls.aseprite  Drill head.aseprite  DrillButton.aseprite  DrillFloors.aseprite  Ice.aseprite  Water tank.aseprite  forge.aseprite  fridged.aseprite  iceFalling.aseprite  pipes.aseprite  pipesBroken.aseprite  steering wheel.aseprite  waterResourceIcon.aseprite
Aseprite files/UI/: Arrow Paths.aseprite  NavBackground.aseprite  Start button.aseprite  cavernBackground.aseprite  checkBox.aseprite  drillNav.aseprite  epicIcon.aseprite  savebcg.aseprite
Aseprite files/World/: HardRocks.aseprite  Scrap.aseprite
Aseprite files/effects/: Dirt effect.aseprite  DropEffect.aseprite  rock effect.aseprite
dependencies/x32/: sqlite3.lib
dependencies/x64/: readme.txt  sqlite3.lib
extras/: AppRun  scoundrills.desktop
src/: CameraManager.cpp  CameraManager.h  Database.cpp  Database.h  MainGame.cpp  MainGame.h  Navigation.cpp  Navigation.h  Pathfinding.cpp  Pathfinding.h  Player.cpp  Player.h  PlayerResources.cpp  PlayerResources.h  SelectedTileRenderer.cpp  SelectedTileRenderer.h  TileHandler.cpp  TileHandler.h  UICoordinator.cpp  UICoordinator.h  main.cpp
src/buttons/: ControllerButton.cpp  ControllerButton.h
src/drill/: AnimatedPlayerStation.cpp  DrillAssetRenderer.cpp  DrillAssetRenderer.h  DrillManager.cpp  DrillManager.h  PlayerResources.cpp  PlayerResources.h  PlayerStation.cpp  PlayerStation.h
src/interactable/: AnimatedPlayerStation.cpp  AnimatedPlayerStation.h  Holdable.cpp  Holdable.h  PlayerStation.cpp  PlayerStation.h
src/interactable/specificStations/: Boiler.cpp  Boiler.h  Forge.cpp  Forge.h  Fridge.cpp  Fridge.h  PipeWorkbench.cpp  PipeWorkbench.h  WaterTank.cpp  WaterTank.h
src/pathfinding/: PathRenderer.cpp  PathRenderer.h  Pathfinding.cpp  Pathfinding.h  SelectedTileRenderer.cpp  SelectedTileRenderer.h
src/piloting/: Cavern.cpp  Cavern.h  Navigation.cpp  Navigation.h  Outcove.h
src/players/: PathRenderer.cpp  PathRenderer.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h
src/scenes/: GlobalContext.cpp  GlobalContext.h  MainGame.cpp  MainGame.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  SceneManager.cpp  SceneManager.h
src/scenes/MainGame/: CameraManager.cpp  CameraManager.h  MainGame.cpp  MainGame.h  UICoordinator.cpp  UICoordinator.h
src/scenes/MainMenu/: MainMenu.cpp  MainMenu.h  SaveInfoElement.cpp  SaveInfoElement.h
src/scenes/RogueGallery/: RogueGallery.cpp  RogueGallery.h  SelectableCrew.cpp  SelectableCrew.h
src/scenes/SaveInfoElement/: SaveInfoElement.cpp  SaveInfoElement.h
src/scenes/Tutorial/: Dialogue.cpp  Dialogue.h  Officer.cpp  Officer.h  Tutorial.cpp  Tutorial.h  TutorialUI.cpp  TutorialUI.h
